Fix: Agregar campo disponible a Entidad y sincronizar lógica en Controller